WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276863
[Navigation] Fix navigate-event/navigate-history-go-0.html
https://bugs.webkit.org/show_bug.cgi?id=276863
Summary
[Navigation] Fix navigate-event/navigate-history-go-0.html
Rob Buis
Reported
2024-07-21 04:53:58 PDT
Fix navigate-event/navigate-history-go-0.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-07-21 05:30:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31040
EWS
Comment 2
2024-07-22 01:28:38 PDT
Committed
281182@main
(119c3f505360): <
https://commits.webkit.org/281182@main
> Reviewed commits have been landed. Closing PR #31040 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-22 01:29:17 PDT
<
rdar://problem/132225747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug