[Navigation] Fix navigate-event/navigate-history-go-0.html https://bugs.webkit.org/show_bug.cgi?id=276863

Reviewed by Darin Adler.

Fix navigate-history-go-0.html by adding a new state to NavigationHistoryBehavior to identify
reloads so the determined navigation type will be "reload". This is needed because go(0) is not
identified as a traditional reload by FrameLoader.

This PR also corrects an unaddressed review comment from 281135@main and replaces StateObjectType with
NavigationHistoryBehavior.

* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/navigate-history-go-0-expected.txt:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::changeLocation):
(WebCore::determineNavigationType):
(WebCore::FrameLoader::loadURL):
* Source/WebCore/loader/FrameLoader.h:
* Source/WebCore/loader/FrameLoaderTypes.h:
* Source/WebCore/loader/NavigationScheduler.cpp:
* Source/WebCore/page/History.cpp:
(WebCore::History::stateObjectAdded):
* Source/WebCore/page/History.h:
(WebCore::History::pushState):
(WebCore::History::replaceState):

Canonical link: https://commits.webkit.org/281182@main